<resources>
    <string name="app_name">Bet there. Save lives.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>


    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="authority_group">Authority Group</string>
    <string name="action_login_screen">Log in</string>
    <string name="or">OR</string>
    <string name="phone_number">Phone number</string>
    <string name="birth_date">Birth date</string>
    <string name="place_of_residence">Address</string>
    <string name="blood_type">Blood type</string>
    <string name="birth_year">Birth year</string>
    <string name="title_activity_donation_desc">Your donation</string>
    <string name="questioneers">Questioneers</string>
    <string name="Question">Question</string>


</resources>
